--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
     {% endwith %}
 </nav>
 <div class="blackout_container"></div>
-<div class="content">
-    <div style="width: 60%;">
+<div class="content_container" >
+    <div class="content">
         <!-- All content of this web-site -->
         {% block content %}
 
@@ -63,15 +63,14 @@
     </div>
 </div>
 <div class="container dir_row" style="position: fixed; justify-content: center; height: fit-content; width: 100%;">
-    <div class="warning_message_container warning_message" style="width: 1000px;" data-action="modal_error_window">
-        <div class="container dir_row" style="justify-content: center; width: 100%; justify-content: center">
+    <div class="warning_message_container warning_message" data-action="modal_error_window">
+        <div class="container dir_row" style="justify-content: center; width: 100%;">
             <div data-action="error_message" class="warning_message" style="background-color: rgba(0,0,0,0)">
 
             </div>
         </div>
-        <div data-action="close_modal_error" style="cursor: pointer;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+        <div class="close" data-action="close_modal_error">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                 <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
             </svg>
         </div>
