Pre-final commit

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container dir_row" style="width: 100%; justify-content: center">
     <div class="container">
-    <form data-action="auth_form" method="POST" class="form">
+    <form data-action="signup_form" method="POST" class="form">
     <div class="form_title">Регистрация</div>
     {% csrf_token %}
         <div class="container dir_row" style="width: 100%; justify-content: center;">
