--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,7 +4,7 @@
     <div class="container dir_row" style="width: 100%; justify-content: center">
     <div class="container">
     <form data-action="change_password_form" method="POST" class="form">
-    <div class="form_title">Сброс пароля</div>
+    <div class="form_title">Смена пароля</div>
     {% csrf_token %}
         <div class="container dir_row" style="width: 100%; justify-content: center;">
             <div class="container" style="width: 100%;">
