--- a/mainApp/static/css/form.css
+++ b/mainApp/static/css/form.css
@@ -38,7 +38,7 @@
     padding: 25px 0;
 }
 
-.inp{
+.inp, .form input{
     box-sizing: border-box;
     border-radius: 10px;
     font-size: 16px;
@@ -50,11 +50,11 @@
     transition: all .2s;
 }
 
-.inp:first-child{
+.inp:first-child, .form input:first-child{
     margin: 0;
 }
 
-.inp.err, .inp.err:focus, .inp.err:hover{
+.inp.err, .inp.err:focus, .inp.err:hover, .form input.err, .form input.err:focus, .form input.err:hover{
     border: rgb(236, 68, 68) solid 2px;
 }
 
@@ -63,15 +63,16 @@ span.err{
     font-size: 14px;
 }
 
-.inp_default:hover{
+.inp_default, .form input{
+    border: rgb(212, 212, 212) solid 2px;
+}
+
+.inp_default:hover, .form input:hover{
     border: rgb(124, 124, 124) solid 2px;
 }
 
-.inp_default:focus{
+.inp_default:focus, .form input:focus{
     border: rgb(68, 112, 236) solid 2px;
-}
-.inp_default{
-    border: rgb(212, 212, 212) solid 2px;
 }
 
 @media (max-width: 650px){
