--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,8 @@
                 <div class="submenu_container">
                     <a class="nav_item nav_item_submenu">{{ request.user.username }}</a>
                     <div class="submenu">
-                        <a class="submenu_item" href="{% url 'change_password' %}">Change password</a>
+                        <a class="submenu_item" href="{% url 'edit_profile' %}">Изменить профиль</a>
+                        <a class="submenu_item" href="{% url 'change_password' %}">Смена пароля</a>
                     </div>
                 </div>
                 <a href="{% url 'logout' %}" class="{% if un == 'logout' %}nav_item_active{% else %}nav_item{% endif %}">Выйти</a>
