Pre-final commit

--- a/templates/registration/edit_profile.html
+++ b/templates/registration/edit_profile.html
@@ -16,6 +16,7 @@
                         {{ form }}
                     </div>
                     <button data-action="auth_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content; margin-left: 0; margin-right: 0;">Изменить</button>
+                    <a class="form_link" href="{% url 'change_password' %}">Смена пароля</a>
                 </div>
             </div>
         </form>
