--- a/templates/content/about_project.html
+++ b/templates/content/about_project.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}About our project{% endblock %}
+{% block title %}FormDecryptor 1.0.0 | INSTRUCTION{% endblock %}
 {% block content %}
     {% autoescape off %}{{ instruction.text }}{% endautoescape %}
 {% endblock %}
