--- a/templates/content/create_instruction.html
+++ b/templates/content/create_instruction.html
@@ -8,7 +8,7 @@
             <div class="container" style="width: 100%;">
                 {{ form.media }}
                 {{ form }}
-                <button type="submit" class="bt bt_default" style="font-size: 19px;">Create</button>
+                <button type="submit" class="bt bt_default" style="font-size: 19px;">Save changes</button>
             </div>
         </div>
     </form>
