--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -13,7 +13,7 @@
                     <input class="inp inp_default" placeholder="Новый пароль..." type="password" name="new_password1" autocomplete="new-password" id="id_new_password1">
                     <input class="inp inp_default" placeholder="Подтверждение нового пароля..." type="password" name="new_password2" autocomplete="new-password" id="id_new_password2">
                 </div>
-                <button data-action="change_password_button" type="submit" class="bt bt_default" style="font-size: 19px;">Изменить</button>
+                <button data-action="auth_button" type="submit" class="bt bt_default" style="font-size: 19px;">Изменить</button>
             </div>
         </div>
     </form>
