--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="{% static 'manage/jquery-form/dist/jquery.form.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/upload.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/auth.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/loading.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/display_warnings.js' %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
     <title>{% block title %}{% endblock %}</title>
