--- a/templates/formDecryptor/index.html
+++ b/templates/formDecryptor/index.html
@@ -24,8 +24,13 @@ Upload and decrypt form
             </div>
             <!-- Сюда через jquery добавляются загруженные файлы -->
             <div class="container dir_row" style="justify-content: center">
-                <ul class="progress_ul" style="margin-top: 30px;">
+                <ul class="upload_container" style="margin-top: 30px;">
                 </ul>
+            </div>
+
+            <div class="container dir_row" style="justify-content: center">
+                <div data-action="debug_window" class="upload_container" style="margin-top: 30px; height: fit-content">
+                </div>
             </div>
         </div>
     </form>
