--- a/formDecryptor/static/css/upload.css
+++ b/formDecryptor/static/css/upload.css
@@ -85,7 +85,7 @@
     stroke-linecap: round;
 }
 
-.progress_ul{
+.upload_container{
     display: flex;
     flex-direction: column;
     box-shadow: inset rgba(0,0,0,0.25) 0 4px 4px 0;
@@ -114,7 +114,7 @@
 }
 
 @media (max-height: 850px) {
-    .progress_ul{
+    .upload_container{
         height: 400px;
     }
 }
