--- a/templates/formDecryptor/index.html
+++ b/templates/formDecryptor/index.html
@@ -12,7 +12,7 @@ Upload and decrypt form
             <div class="container dir_row" style="width: 100%">
                 <div style="margin: 5px; font-size: 22px;">1.</div><input class="inp inp_default" style="width: 33.3%; margin: 0" min="1" type="number" placeholder="Кол-во строк..." data-action="rows">
                 <div style="margin: 5px; font-size: 22px;">2.</div><input class="inp inp_default" style="width: 33.3%; margin: 0" min="1" type="number" placeholder="Кол-во столбцов..." data-action="columns">
-                <div style="margin: 5px; font-size: 22px;">3.</div><input class="inp inp_default" style="width: 33.3%; margin: 0" min="1" type="number" placeholder="Максимальное кол-во файлов (по умолчанию 700)..." data-action="files_count">
+                <div style="margin: 5px; font-size: 22px;">3.</div><input class="inp inp_default" style="width: 33.3%; margin: 0" min="1" type="number" placeholder="Максимальное кол-во файлов..." data-action="files_count">
             </div>
             <div class="container dir_row" style="width: 100%">
                 <div style="margin: 5px; font-size: 22px; margin-top: 25px">4.</div><input class="inp inp_default" type="text" placeholder="Правильные ответы через пробел, например 1А 2Б..." data-action="answers">
