--- a/templates/formDecryptor/index.html
+++ b/templates/formDecryptor/index.html
@@ -44,7 +44,7 @@ Upload and decrypt form
             </div>
 
             <div class="container dir_row" style="justify-content: center">
-                <div data-action="debug_window" class="upload_container" style="margin-top: 30px; height: fit-content">
+                <div data-action="debug_window" class="upload_container" style="margin-top: 30px; height: fit-content; max-height: 300px; overflow: auto">
                 </div>
             </div>
         </div>
