--- a/templates/formDecryptor/index.html
+++ b/templates/formDecryptor/index.html
@@ -10,9 +10,9 @@ Upload and decrypt form
     <div class="container dir_row" style="width: 100%; justify-content: center">
         <div class="inp_container" style="width: 100%">
             <div class="tField" style="width: 100%">
-                <div class="container dir_row"><div style="width: fit-content; margin: 5px; margin-top: 25px; font-size: 22px;">1.</div><input class="inp inp_default" style="margin-left: 1px;margin-right: 1px" min="1" type="number" placeholder="Кол-во строк..." data-action="rows"></div>
-                <div class="container dir_row"><div style="width: fit-content; margin: 5px; margin-top: 25px; font-size: 22px;">2.</div><input class="inp inp_default" style="margin-left: 1px;margin-right: 1px" min="1" type="number" placeholder="Кол-во столбцов..." data-action="columns"></div>
-                <div class="container dir_row"><div style="width: fit-content; margin: 5px; margin-top: 25px; font-size: 22px;">3.</div><input class="inp inp_default" style="margin-left: 1px;margin-right: 1px" min="1" type="number" placeholder="Максимальное кол-во файлов..." data-action="files_count"></div>
+                <div class="container dir_row tFieldI"><div style="width: fit-content; margin: 5px; margin-top: 25px; font-size: 22px;">1.</div><input class="inp inp_default" style="margin-left: 1px;margin-right: 1px" min="1" type="number" placeholder="Кол-во строк..." data-action="rows"></div>
+                <div class="container dir_row tFieldI"><div style="width: fit-content; margin: 5px; margin-top: 25px; font-size: 22px;">2.</div><input class="inp inp_default" style="margin-left: 1px;margin-right: 1px" min="1" type="number" placeholder="Кол-во столбцов..." data-action="columns"></div>
+                <div class="container dir_row tFieldI"><div style="width: fit-content; margin: 5px; margin-top: 25px; font-size: 22px;">3.</div><input class="inp inp_default" style="margin-left: 1px;margin-right: 1px" min="1" type="number" placeholder="Максимальное кол-во файлов..." data-action="files_count"></div>
             </div>
             <div class="container dir_row" style="width: 100%">
                 <div style="margin: 5px; font-size: 22px; margin-top: 25px">4.</div><input class="inp inp_default" type="text" placeholder="Правильные ответы через пробел, например 1А 2Б..." data-action="answers">
