--- a/templates/content/contacts.html
+++ b/templates/content/contacts.html
@@ -3,9 +3,9 @@
 {% block content %}
 <h1 class="container dir_row" style="justify-content: center; margin-bottom: 50px;">Контакты</h1>
 <ul>
-    <h2><li>эл. почта: kopylovartyom007@gmail.com Копылов Артем</li></h2>
-    <h2><li>telegram: @artyomka007 или Лымарь Виктор</li></h2>
-    <h2><li>контактные телефоны: +79126865578 Артем Копылов, +79264287907 Лымарь Виктор</li></h2>
+    <h3><li>эл. почта: kopylovartyom007@gmail.com Копылов Артем, vektobus@gmail.com Лымарь Виктор</li></h3>
+    <h3><li>telegram: @artyomka007 или Лымарь Виктор</li></h3>
+    <h3><li>контактные телефоны: +79126865578 Артем Копылов, +79264287907 Лымарь Виктор</li></h3>
 </ul>
 
 {% endblock %}
